--- a/excel/package.json
+++ b/excel/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "bun": "^1.2.13",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
@@ -23,15 +24,19 @@
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
     "framer-motion": "^12.9.2",
+    "html2canvas": "^1.4.1",
     "init": "^0.1.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.506.0",
     "multer": "^1.4.5-lts.2",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
+    "run": "^1.5.0",
     "shadcn": "^2.5.0",
     "three": "^0.176.0",
     "xlsx": "^0.18.5"
