--- a/excel/package.json
+++ b/excel/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.7.0",
@@ -18,8 +19,12 @@
     "axios": "^1.9.0",
     "bun": "^1.2.13",
     "chart.js": "^4.4.9",
+    "class-variance-authority": "^0.7.1",
+    "cloudinary": "^1.41.3",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
@@ -29,6 +34,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.506.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -38,12 +44,15 @@
     "recharts": "^2.15.3",
     "run": "^1.5.0",
     "shadcn": "^2.5.0",
+    "tailwind-merge": "^3.3.0",
     "three": "^0.176.0",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/node": "^22.15.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/three": "^0.176.0",
@@ -55,6 +64,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.9",
     "vite": "^6.3.1"
   }
 }
