--- a/excel/package.json
+++ b/excel/package.json
@@ -35,9 +35,10 @@
     "init": "^0.1.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.506.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "papaparse": "^5.5.2",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
