--- a/excel/package.json
+++ b/excel/package.json
@@ -19,12 +19,14 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "bun": "^1.2.13",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "d3": "^7.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -38,6 +40,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -45,6 +48,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
+    "resend": "^4.5.1",
     "run": "^1.5.0",
     "shadcn": "^2.5.0",
     "tailwind-merge": "^3.3.0",
