--- a/excel/.env
+++ b/excel/.env
@@ -6,3 +6,10 @@ GOOGLE_GENERATIVE_API_KEY= 'AIzaSyAMHYqnT9cFHqgdcnkcritmwECg90X0B5A'
 SUPERADMIN_EMAIL = "yashkasera07@gmail.com"
 SUPERADMIN_PASSWORD = "Yashk@07"
 RESEND_API_KEY = re_f3pYLZbc_93WKDAYuqktqFeNdW42D6v57
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyDGd9lEUBaCB4yNGCF7IyNAlg23DgAZt6c
+REACT_APP_FIREBASE_AUTH_DOMAIN=excelwiz-dad69.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=excelwiz-dad69
+REACT_APP_FIREBASE_STORAGE_BUCKET=excelwiz-dad69.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1058594841348
+REACT_APP_FIREBASE_APP_ID=1:1058594841348:web:12b7663264c568bc3e6651
