more env bugs fixed

--- a/excel/.env
+++ b/excel/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID=excelwiz-dad69
 VITE_FIREBASE_STORAGE_BUCKET=excelwiz-dad69.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=1058594841348
 VITE_FIREBASE_APP_ID=1:1058594841348:web:12b7663264c568bc3e6651
+VITE_API_BASE_URL=/api/profile
