--- a/excel/backend/package.json
+++ b/excel/backend/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^13.4.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
