--- a/excel/backend/package.json
+++ b/excel/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "resend": "^4.5.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
